# react-native-multithreading

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  package.json  react-native-multithreading.podspec  tsconfig.json
android/: .gitignore  CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/patches/reanimated/: Android.mk
android/src/main/: AndroidManifest.xml  Common
android/src/main/JNI/: Android.mk  Application.mk
android/src/main/JNI/react/: Android.mk
android/src/main/cpp/: AndroidErrorHandler.h  AndroidScheduler.h  cpp-adapter.cpp  dummy.c
android/src/main/java/com/reactnativemultithreading/: MultithreadingJSIModulePackage.java  MultithreadingModule.java  MultithreadingModule.kt  MultithreadingPackage.java  MultithreadingPackage.kt  MultithreadingPlugin.java  MultithreadingScheduler.java
cpp/: MakeJSIRuntime.cpp  MakeJSIRuntime.h  MultithreadingScheduler.cpp  MultithreadingScheduler.h  RNMultithreading.cpp  RNMultithreading.h  RNMultithreadingInstaller.cpp  RNMultithreadingInstaller.h  ThreadPool.cpp  ThreadPool.h
example/: .gitignore  App.tsx  app.json  babel.config.js  globals.d.ts  index.js  index.tsx  metro.config.js  package-lock.json  package.json  react-native.config.js
example/.github/workflows/: build-ios.yml  validate-android.yml  validate-js.yml
example/android/: build.gradle  settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/debug/java/com/example/reactnativemultithreading/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/listyexample/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativemultithreading/: ExampleJSIModulePackage.java  MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/listyexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/listyexample/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/listyexample/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/listyexample/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ListyExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ListyExample.xcodeproj/: project.pbxproj
example/ios/ListyExample.xcodeproj/xcshareddata/xcschemes/: ListyExample.xcscheme
example/ios/ListyExampleTests/: ListyExampleTests.m
example/ios/MultithreadingExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MultithreadingExample.xcodeproj/: project.pbxproj
example/ios/MultithreadingExample.xcodeproj/xcshareddata/xcschemes/: MultithreadingExample.xcscheme
example/ios/MultithreadingExample.xcworkspace/: contents.xcworkspacedata
example/patches/: react-native-reanimated+2.0.0.patch
example/src/: App.tsx  Fibonacci.tsx  PressableOpacity.tsx  ThreadBlocking.tsx
ios/: MakeJSIRuntime.cpp  MakeJSIRuntime.h  Multithreading.h  Multithreading.mm  MultithreadingPlugin.h  MultithreadingScheduler.h  MultithreadingScheduler.mm  RNMultithreading.h  RNMultithreading.mm  RNMultithreadingInstaller.h  RNMultithreadingInstaller.mm  ThreadPool.h
ios/Multithreading.xcodeproj/: project.pbxproj
scripts/: build-android.sh  template.build.gradle
src/: index.ts  index.tsx
